# slowpt

./: CMakeLists.txt  README.md  image - 副本.ppm  image.ppm  image_insphere_nopdf.ppm  image_insphere_nopdf_unit.ppm  image_onsphere_nopdf.ppm  image_onsphere_nopdf_unit.ppm  samlpe-code-smallpt.cpp  smallpt  smallpt-with-comment.cpp  test.cpp
src/: 8.1.3_random_inside_sphere.ppm  8.1.3_random_on_sphere.ppm  CMakeLists.txt  camera.h  colorRGB.h  image - 副本 (2).ppm  image - 副本.ppm  image.ppm  main.cpp  material.h  objectbase.cpp  objectbase.h  objectlist.h  objectsphere.cpp  objectsphere.h  ray.h  rtutilities.h  vec3d.h
src/appearance/: material.h  noise.h  texture.h  textures.h
src/base/: aabb.h  camera.h  colorRGB.h  image_utils.h  onb.h  pdf.h  ray.h  rt_utils.h  rtutil.h  rtutilities.h  vec3d.h
src/object/: aabb.h  aarectangle.h  baseobject.h  box.h  bvh.h  constantmedium.h  objectbase.h  objectlist.h  objectsphere.h  prefabs.h  sphere.h  sphereobject.h
test/: CMakeLists.txt  main.cpp
